--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SITE_NAME_HEADER=Digital Garden
-SITE_MAIN_LANGUAGE=en
+SITE_MAIN_LANGUAGE=jp
 SITE_BASE_URL=https://shintaro2501.github.io/digital-garden-site/
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
